--- a/main.tex
+++ b/main.tex
@@ -243,9 +243,7 @@ Las direcciones se utilizan al enviar pagos en criptomonedas, son identificadas 
 
 \section{Cardano}
 
-Cardano~\cite{cardano_docs} es una plataforma blockchain de tipo \textit{proof-of-stake} (prueba de participación)
-\footnote{Definiciones más extensas sobre PoS se encuentran en los sitios web de \href{https://ethereum.org/en/developers/docs/consensus-mechanisms/pos/}{Ethereum} y \href{https://www.coinbase.com/es/learn/crypto-basics/what-is-proof-of-work-or-proof-of-stake}{Coinbase}}
-descentralizada de tercera generación y el hogar de la criptomoneda \textit{ada}. Es la primera plataforma de cadena de bloques que evoluciona a partir de una filosofía científica y un enfoque impulsado por la investigación.
+Cardano~\cite{cardano_docs} es una plataforma blockchain de tipo \textit{proof-of-stake} (prueba de participación) descentralizada de tercera generación y el hogar de la criptomoneda \textit{ada}. Es la primera plataforma de cadena de bloques que evoluciona a partir de una filosofía científica y un enfoque impulsado por la investigación.
 
 La primera generación de blockchains (con Bitcoin como gran representante) ofrecía ledgers descentralizados para la transferencia segura de criptomonedas. Sin embargo, tales cadenas de bloques no proporcionaron un entorno funcional para la liquidación de acuerdos complejos y el desarrollo de aplicaciones descentralizadas (dApps). A medida que la tecnología blockchain maduró, la segunda generación (por ejemplo Ethereum) proporcionó soluciones mejoradas para redactar y ejecutar contratos inteligentes, desarrollar aplicaciones y crear diferentes tipos de tokens. Sin embargo, la segunda generación de cadenas de bloques a menudo enfrenta problemas en términos de escalabilidad.
 
