Copio bib file dentro de presentacion/ para que overleaf compile sin errores

--- a/presentacion/presentacion.tex
+++ b/presentacion/presentacion.tex
@@ -367,7 +367,7 @@ continuación presentamos una lista de los principales, clasificados por sus fun
 \section{Bibliografía}
 \begin{frame}[allowframebreaks]{Bibliografía}
     \bibliographystyle{apalike}
-    \bibliography{../bibliografia.bib}
+    \bibliography{bibliografia.bib}
 \end{frame}
 
 \end{document}
